--- a/index.css
+++ b/index.css
@@ -70,7 +70,90 @@ button {
   box-shadow: 1px 1px 10px rgb(245, 225, 224), -2px 10px 15px rgb(245, 225, 224);
 }
 
-@media screen and (min-width: 1366px) {
+/*
+@media screen and (min-width: 768px) {
+  #bg {
+    background-image: url(./images/bg-pattern-desktop.svg);
+    background-repeat: repeat-y;
+  }
+
+  .mobile {
+    display: none;
+  }
+
+  .desktop {
+    display: block;
+  }
+
+  .left {
+    float: left;
+    width: 55%;
+    padding: 5rem;
+  }
+
+  .right {
+    float: left;
+    width: 45%;
+  }
+
+  .right img {
+    width: 45vw;
+    height: 100vh;
+  }
+
+  .desktopLogo {
+    padding-left: 3rem;
+  }
+
+  .soon {
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
+  h1 {
+    font-size: 4.8rem;
+    padding-bottom: 3rem;
+    line-height: 7rem;
+  }
+
+  .soon p {
+    font-size: 2.5rem;
+    line-height: 3.5rem;
+  }
+
+  .email {
+    display: inline-flex;
+  }
+
+  input {
+    height: 6rem;
+    width: 29rem;
+    border: 0.2rem solid palevioletred;
+    font-size: 2rem;
+  }
+
+  button {
+    height: 6rem;
+    width: 6.5rem;
+    margin-left: 1rem;
+    background-color: rgb(249, 205, 206);
+  }
+
+  .error {
+    margin-top: 1.8rem;
+    margin-left: -8rem;
+  }
+
+  .desktop p {
+    font-size: 1.6rem;
+    margin-top: -8rem;
+    padding-left: 3.5rem;
+    color: pink;
+  }
+}
+*/
+
+@media screen and (min-width: 1300px) {
   #bg {
     background-image: url(./images/bg-pattern-desktop.svg);
     background-repeat: no-repeat;
@@ -135,5 +218,12 @@ button {
   .error {
     margin-top: 1.1rem;
     margin-left: -8rem;
+  }
+
+  .desktop p {
+    font-size: 1.5rem;
+    margin-top: -8rem;
+    padding-left: 3.5rem;
+    color: pink;
   }
 }
